--- a/frontend/src/Components/Offers/Offers.css
+++ b/frontend/src/Components/Offers/Offers.css
@@ -1,11 +1,11 @@
 .offers {
-    width: 65%;
+    width: 100%;
     height: 80vh;
     display: flex;
     margin: auto;
     margin-top: 100px;
-    padding: 0px 140px;
-    margin-bottom: 150px;
+    padding: auto;
+    margin-bottom: 120px;
     background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
 }
 .offers-left {
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 100px;
 }
 .offers-left h1 {
     color: #171717;
@@ -42,4 +43,5 @@
     align-items: center;
     justify-content: flex-end;
     padding-top: 50px;
+    margin-right: 150px;
 }
