--- a/frontend/src/Components/RelatedProducts/RelatedProducts.css
+++ b/frontend/src/Components/RelatedProducts/RelatedProducts.css
@@ -1,5 +1,6 @@
 .relatedproducts {
     display: flex;
+    margin-bottom: 40px;
     flex-direction: column;
     align-items: center;
     gap: 10px;
