--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 100px;
+    margin-top: -60px;
 }
 .new-collections h1 {
     color: #171717;
@@ -19,6 +20,51 @@
 .collections {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-top: 50px;
+    margin-top: 30px;
     gap: 30px;
+}
+@media (max-width:1280px) {
+    .new-collections h1 {
+        font-size: 40px;
+    }
+    .new-collections hr {
+        width: 160px;
+        height: 4px;
+    }
+    .collections {
+        gap: 20px;
+        margin-top: 30px;
+    }
+}
+@media (max-width:1024px) {
+    .new-collections h1 {
+        font-size: 30px;
+    }
+    .new-collections hr {
+        width: 120px;
+        height: 3px;
+    }
+    .collections {
+        gap: 15px;
+        margin-top: 20px;
+    }
+}
+@media (max-width:800px) {
+    .new-collections h1 {
+        font-size: 20px;
+        margin-top: 30px;
+    }
+    .new-collections hr {
+        width: 100px;
+    }
+    .collections {
+        gap: 15px;
+    }
+}
+@media (max-width:500px) {
+    .collections {
+        display: grid;
+        grid-template-columns:  1fr 1fr;
+        gap: 20px;
+    }
 }
