--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -20,13 +20,13 @@
 .footer-links {
     display: flex;
     list-style: none;
-    gap: 10px;
+    gap: 100px;
     color: #252525;
     font-size: 10px;
 }
 .footer-links li {
     cursor: pointer;
-    font-size: 20px;
+    font-size: 24px;
     padding: 20px;
 }
 .footer-social-icon {
@@ -58,7 +58,9 @@
 }
 @media (max-width:800px) {
     .footer {
+        margin-right: 200px;
         gap: 20px;
+        width: 100%;
     }
     .footer-logo{
         gap: 10px;
@@ -75,7 +77,10 @@
         gap: 0;
     }
     .footer-links li  {
-        font-size: 13px;
+        font-size: 10px;
+    }
+    .footer-copyright hr {
+       width: 125%;
     }
     .footer-social-icon img {
         width: 22px;
@@ -83,4 +88,12 @@
     .footer-copyright {
         font-size: 13px;
     }
+}
+@media (max-width:500px) { 
+    .footer {
+        width: 90%;
+    }
+    .footer-copyright hr {
+        width: 150%;
+     }
 }
