--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -1,6 +1,6 @@
 .loginsignup {
     width: 100%;
-    height: 80vh;
+    height: 60vh;
     background: #fce3fe;
     padding-top: 100px;
     padding-bottom: 300px;
@@ -59,4 +59,54 @@
     color: #5c5c5c;
     font-size: 18px;
     font-weight: 500;
+}
+@media (max-width:1280px) {
+    .loginsignup {
+        height: 45vh;
+        padding-top: 50px;
+    }
+    .loginsignup-container {
+        width: auto;
+        max-width: 500px;
+        max-height: 500px;
+    }
+    .loginsignup-container h1 {
+        margin: 10px 0px;
+    }
+    .loginsignup-fields {
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .loginsignup-fields input {
+        height: 65px;
+        width: 93%;
+    }
+    .loginsignup-container button {
+        width: 100%;
+    }
+    .loginsignup-login {
+        font-size: 16px;
+    }
+    .loginsignup-agree {
+        font-size: 14px;
+        gap: 10px;
+    }
+}
+@media (max-width:800px) {
+    .loginsignup-container {
+        padding: 20px 30px;
+    }
+    .loginsignup-container h1 {
+        font-size: 24px;
+    }
+    .loginsignup-fields {
+        margin-top: 20px;
+    }
+    .loginsignup-fields input {
+        height: 50px;
+    }
+    .loginsignup-container button {
+        height: 50px;
+        font-size: 16px;
+    }
 }
