--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -34,7 +34,58 @@
     height: 69px;
     border-radius: 75px;
     background: #ededed;
-    color: #787878;
+    color: #787878; 
     font-size: 18px;
     font-weight: 500;
+}
+@media (max-width:1280px) {
+    .shopcategory-banner {
+        margin:  20px auto;
+        width: 90%;
+    }
+    .shopcategory-indexSort {
+        width:90%;
+        margin: auto;
+    }
+    .shopcategory-sort {
+        padding:5px 20px;
+        font-size: 12px;
+    }
+    .shopcategory-indexSort p {
+        font-size: 12px;
+    }
+    .shopcategory-products {
+        width: 90%;
+        margin: 10px auto;
+        row-gap: 40px;
+    }
+    .shopcategory-products .item {
+        margin: auto;
+    }
+    .shopcategory-loadmore {
+        margin: 80px auto;
+        width: 200px;
+        height: 60px;
+        font-size: 16px;
+    }
+}
+@media (max-width:800px) {
+    .shopcategory-banner {
+        width: 95%;
+    }
+    .shopcategory-products {
+        width: 95%;
+    }
+    .shopcategory-loadmore {
+        margin: 50px auto;
+        width: 150px;
+        height: 40px;
+        font-size: 13px;
+    }
+}
+@media (max-width:500px) {
+    .shopcategory-products {
+        grid-template-columns: 1fr 1fr;
+    }
+    
 }
