--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -58,7 +58,6 @@
 }
 @media (max-width:800px) {
     .footer {
-        margin-top:100px;
         margin-right: 200px;
         gap: 20px;
         width: 100%;
@@ -96,6 +95,7 @@
         width: 90%;
     }
     .footer-copyright hr {
-        width: 150%;
+        width: 100%;
+        margin-left: 50px;
      }
 }
