--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -76,6 +76,16 @@
 .nav-dropdown {
     display: none;
 }
+.nav-logo img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+  
+.dark-mode .nav-logo img {
+    filter: invert(1);
+  }
+
 @media (max-width:1280px) {
     .navbar {
         padding: 12px 50px;
